prevent header search from vertically stretching

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -57,6 +57,7 @@ $header-logo-height: 50px;
 
 .c-header__search {
   display: flex;
+  align-items: flex-start;
   background-color: $color-white;
   z-index: 1;
   grid-column: 1;
